[tool.poetry]
name = "wave-plus-exporter"
version = "1.0.0"
description = "Prometheus exporter for Airthings Wave Plus."
authors = ["Zackary Troop <zack.tro@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
wave-reader = "^1.0.2"
prometheus-client = "^0.14.1"
twilio = "^7.16.4"
loguru = "^0.6.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
